k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: exam-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: yannickng/exam-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001

        volumeMounts:
        - mountPath: /data
          name: sqlite-storage

        livenessProbe:
          httpGet:
            path: /health
            port: 3001

        readinessProbe:
          httpGet:
            path: /health
            port: 3001

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

      volumes:
      - name: sqlite-storage
        persistentVolumeClaim:
          claimName: sqlite-pvc
